# sbomical

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: nix-tests.yml  syft-sboms.yml  verify-reuse-compliance.yml
src/: build_systems.rs  lib.rs  main.rs
