# SPDX-FileCopyrightText: 2025 Dom Rodriguez <Dom.Rodriguez@codethink.co.uk>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sbomlical"
authors = ["Dom Rodriguez <Dom.Rodriguez@codethink.co.uk>"]
description = "Suite for scanning software projects and generating SBOMs, as well as license reports."
edition = "2021"
readme = "README.md"
repository = "https://github.com/shymega/sbomlical"
rust-version = "1.82.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "string", "env"] }
env_logger = "0.11.6"
license = { version = "3.6.0", features = ["serde"] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde-cyclonedx = "0.9.1"
serde-spdx = "0.9.1"
serde_json = "1.0.140"
spdx = "0.10.8"
spdx-rs = "0.5.5"
thiserror = "2.0.12"
